[project]
name = "test-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "flax>=0.11.2",
    "h5py>=3.14.0",
    "hydra-core>=1.3.2",
    "imblearn>=0.0",
    "ipykernel>=6.30.1",
    "jax>=0.7.2",
    "matplotlib>=3.10.5",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "pywavelets>=1.9.0",
    "safetensors>=0.6.2",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.5.2",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "termcolor>=3.1.0",
    "timm>=1.0.19",
    "torch>=2.8.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
    "zetascale>=2.8.6",
]
